--- a/views/template.html
+++ b/views/template.html
@@ -5,6 +5,7 @@
 <title>SFEI Systems</title>
 <link rel='shortcut icon' href="../public/img/favicon.ico" />
 <link rel='stylesheet' href='../public/stylesheets/bootstrap.css' />
+<link rel='stylesheet' href='../public/stylesheets/font-awesome.css' />
 <link rel='stylesheet' href='../public/stylesheets/common.css' />
 <script type="text/javascript" src="../public/js/jquery-1.8.1.min.js"></script>
 <script type="text/javascript" src="../public/js/bootstrap.js"></script>
@@ -25,7 +26,7 @@
       	<a href="about" class="dropdown-toggle version" data-toggle="dropdown">NTWRK>>SYS>!NULL</a>
         <ul class="dropdown-menu">
         	<li><a href="/idn" class="access_id">Not Authenticated</a></li>
-          <li class="access_logout" style="display:none;"><a href="#">Terminate Connection</a></li>
+          <li class="access_logout" style="display:none;"><a href="javascript:;">Terminate Connection</a></li>
         </ul>
       </li>
     </ul>
@@ -102,7 +103,7 @@
               <h3 class="fixie"></h3>
               <p class="fixie"></p>
               <p class="fixie"></p>
-              <p><a href="#" class="btn">More..</a></p>
+              <p><a href="javascript:;" class="btn">More..</a></p>
             </div>
           </div>
         </li>
@@ -112,7 +113,7 @@
               <h3 class="fixie"></h3>
               <p class="fixie"></p>
               <p class="fixie"></p>
-              <p><a href="#" class="btn">More..</a></p>
+              <p><a href="javascript:;" class="btn">More..</a></p>
             </div>
           </div>
         </li>
@@ -126,7 +127,7 @@
               <h3 class="fixie"></h3>
               <p class="fixie"></p>
               <p class="fixie"></p>
-              <p><a href="#" class="btn">More..</a></p>
+              <p><a href="javascript:;" class="btn">More..</a></p>
             </div>
           </div>
         </li>
@@ -136,7 +137,7 @@
               <h3 class="fixie"></h3>
               <p class="fixie"></p>
               <p class="fixie"></p>
-              <p><a href="#" class="btn">More..</a></p>
+              <p><a href="javascript:;" class="btn">More..</a></p>
             </div>
           </div>
         </li>
@@ -146,7 +147,7 @@
               <h3 class="fixie"></h3>
               <p class="fixie"></p>
               <p class="fixie"></p>
-              <p><a href="#" class="btn">More..</a></p>
+              <p><a href="javascript:;" class="btn">More..</a></p>
             </div>
           </div>
         </li>
@@ -164,7 +165,7 @@
             <div class="caption">
               <h3 class="fixie"></h3>
               <p class="fixie"></p>
-              <p><a href="#" class="btn btn-primary">Launch</a> <a href="#" class="btn">Details</a></p>
+              <p><a href="javascript:;" class="btn btn-primary">Launch</a> <a href="javascript:;" class="btn">Details</a></p>
             </div>
           </div>
         </li>
@@ -173,7 +174,7 @@
             <div class="caption">
               <h3 class="fixie"></h3>
               <p class="fixie"></p>
-              <p><a href="#" class="btn btn-primary">Launch</a> <a href="#" class="btn">Details</a></p>
+              <p><a href="javascript:;" class="btn btn-primary">Launch</a> <a href="javascript:;" class="btn">Details</a></p>
             </div>
           </div>
         </li>
@@ -182,7 +183,7 @@
             <div class="caption">
               <h3 class="fixie"></h3>
               <p class="fixie"></p>
-              <p><a href="#" class="btn btn-primary">Launch</a> <a href="#" class="btn">Details</a></p>
+              <p><a href="javascript:;" class="btn btn-primary">Launch</a> <a href="javascript:;" class="btn">Details</a></p>
             </div>
           </div>
         </li>
@@ -195,6 +196,9 @@
   </footer>
 </div>
 <!-- end container --> 
+<div class="back-to-top" data-spy="affix" data-offset-top="200">
+  <a href="javascript:void(0);" class="btn"><i class="icon-upload"></i></a>
+</div>
 <script type="text/javascript" src="../public/js/fixie.js"></script>
 </body>
 </html>
