--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -163,3 +163,17 @@ textarea{
 .carousel-caption{
   background-color: rgba(0,0,0,.5);
 }
+.back-to-top{
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+}
+.back-to-top .btn{
+  padding: 4px;
+  font-size: 50px;
+}
+.back-to-top.affix-top{
+  position: fixed;
+  bottom: -100px;
+  right: 10px;
+}
