--- a/views/zh/layout.ejs
+++ b/views/zh/layout.ejs
@@ -55,5 +55,8 @@ $(document).ready(function(e) {
   </footer>
 </div>
 <!-- end container --> 
+<div class="back-to-top" data-spy="affix" data-offset-top="80">
+  <a href="javascript:void(0);" class="btn"><i class="icon-upload"></i></a>
+</div>
 </body>
 </html>
