--- a/views/en/idn_authenticate.ejs
+++ b/views/en/idn_authenticate.ejs
@@ -1,9 +1,10 @@
   <header class="idnlogoHeader"></header>
-  <div class="hero-unit authenticate">
+<div class="row-fluid">
+  <div class="span4 offset4 authenticate">
     <h2>Submit Access Code:</h2>
-    <div class="control-group"> <input class="input-xlarge" type="text" name="access_id" id="access_id" placeholder="Access ID:"/></div>
-    <div class="control-group"> <input class="input-xxlarge access_code" type="password" name="access_code" id="access_code" placeholder="Access Code:"/></div>
-    <p><a href="javascript:void(0)" class="btn btn-primary access_code_submit" data-loading-text="Connecting..."> Authenticate </a> <a href="/idn/access/register" class="btn"> Request Clearance Allocation </a></p>
+    <div class="control-group"> <input class="input-block-level" type="text" name="access_id" id="access_id" placeholder="Access ID:"/></div>
+    <div class="control-group"> <input class="input-block-level access_code" type="password" name="access_code" id="access_code" placeholder="Access Code:"/></div>
+    <p> <a href="/idn/access/register" class="btn"> Request Clearance </a> <a href="javascript:void(0)" class="btn btn-primary access_code_submit pull-right" data-loading-text="Connecting..."> Authenticate </a></p>
   </div>
-</section>
+</div>
 <script type="text/javascript" src="/js/idn.js"></script>
