--- a/views/zh/layout.ejs
+++ b/views/zh/layout.ejs
@@ -56,7 +56,7 @@ $(document).ready(function(e) {
 </div>
 <!-- end container --> 
 <div class="back-to-top" data-spy="affix" data-offset-top="80">
-  <a href="javascript:void(0);" class="btn"><i class="icon-upload"></i></a>
+  <a href="javascript:void(0);"><i class="icon-upload"></i></a>
 </div>
 </body>
 </html>
