--- a/views/en/indexlayout.ejs
+++ b/views/en/indexlayout.ejs
@@ -82,16 +82,8 @@ $(document).ready(function(e) {
   </footer>
 </div>
 <!-- end container --> 
-<div id="alertModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="alertTitle" aria-hidden="false" style="display: block;">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="alertTitle">Modal Heading</h3>
-  </div>
-  <div class="modal-body">
-  </div>
-  <div class="modal-footer">
-    <button class="btn" data-dismiss="modal">Close</button>
-  </div>
+<div class="back-to-top" data-spy="affix" data-offset-top="80">
+  <a href="javascript:void(0);"><i class="icon-upload"></i></a>
 </div>
 </body>
 </html>
