--- a/views/en/idn_authenticate.ejs
+++ b/views/en/idn_authenticate.ejs
@@ -1,10 +1,20 @@
-  <header class="idnlogoHeader"></header>
-<div class="row-fluid">
-  <div class="span4 offset4 authenticate">
-    <h2>Submit Access Code:</h2>
-    <div class="control-group"> <input class="input-block-level" type="text" name="access_id" id="access_id" placeholder="Access ID:"/></div>
-    <div class="control-group"> <input class="input-block-level access_code" type="password" name="access_code" id="access_code" placeholder="Access Code:"/></div>
-    <p> <a href="/idn/access/register" class="btn"> Request Clearance </a> <a href="javascript:void(0)" class="btn btn-primary access_code_submit pull-right" data-loading-text="Connecting..."> Authenticate </a></p>
+<header class="idnlogoHeader"></header>
+<div class="row-fluid" id="authenticate">
+  <div class="span4 offset4">
+    <h2>Submit access code</h2>
+    <div class="control-group"><input class="input-block-level" type="text" name="access_id" id="access_id" placeholder="Access ID"/></div>
+    <div class="control-group"><input class="input-block-level access_code" type="password" name="access_code" id="access_code" placeholder="Access code"/></div>
+    <p> <a href="javascript:void(0)" class="btn" id="register-btn"> Request clearance </a><a href="javascript:void(0)" class="btn btn-primary access_code_submit pull-right" data-loading-text="Connecting"> Authenticate </a></p>
+  </div>
+</div>
+<div class="row-fluid" id="form-signup" style="display:none;">
+  <div class="span4 offset4">
+    <h2>Request clearance</h2>
+    <div class="control-group"><input class="input-block-level access_code" type="text" name="new_access_id" id="new_access_id" placeholder="Enter access ID"/></div>
+    <div class="control-group"><input class="input-block-level" type="password" name="new_access_password" id="new_access_password" placeholder="Password"/></div>
+    <div class="control-group"><input class="input-block-level" type="password" name="new_access_password_rp" id="new_access_password_rp" placeholder="Repeat password"/></div>
+    <div class="control-group"><input class="input-block-level" type="text" name="new_access_email" id="new_access_email" placeholder="E-mail address"/></div>
+    <div class="control-group"><a href="javascript:void(0)" class="btn btn-primary register_submit" data-loading-text="Connecting..."> Confirm data </a></div>
   </div>
 </div>
 <script type="text/javascript" src="/js/idn.js"></script>
