--- a/views/en/idn_profile_edit.ejs
+++ b/views/en/idn_profile_edit.ejs
@@ -56,7 +56,7 @@
     </div>
   </div>
 </section>
-<section class="profile-change-passwd">
+<section class="profile-change-passwd form-horizontal">
   <p><span class="label">Change password</span></p>
   <div class="control-group">
     <label class="control-label" for="profile_old_passwd">Old password</label>
