index page config for northstar on cloudfoundry

--- a/views/en/indexlayout.ejs
+++ b/views/en/indexlayout.ejs
@@ -49,28 +49,69 @@ $(document).ready(function(e) {
     </div>
 </header>
 <div id="index-carousel" class="carousel slide">
-    <div class="carousel-inner">
-        <div class="item active">
-            <div class="carousel-body"><a href="/about"><img src="/img/carousel_sys.jpg" alt="SFEI Systems"></a></div>
-            <div class="carousel-caption">
-                <h4>Welcome to North Star.</h4>
-                <p>North Star is a website that allows users to read, submit blogs and interact with blog writters as well as other users.</p>
-            </div>
-        </div>
-        <div class="item">
-            <div class="carousel-body"><a href="/archive"><img src="/img/carousel_archive.jpg" alt="SFEI Systems"></a></div>
-            <div class="carousel-caption">
-                <h4><a href="/archive">Enter the archive.</a></h4>
-                <p>View all articles written by the users of our website.</p>
-            </div>
-        </div>
-        <div class="item">
-            <div class="carousel-body"><a href="/idn"><img src="/img/carousel_idn.jpg" alt="SFEI Systems"></a></div>
-            <div class="carousel-caption">
-                <h4><a href="/idn">Authenticate</a> into the Imaging Database Network.</h4>
-                <p>Login to discover more features of our website!</p>
-            </div>
-        </div>
+    <div class="carousel-inner"> 
+        <div class="item active"> 
+          <div class="carousel-body"><a href="/archive?f=Game%20Quotes"><img src="/img/carousel_gamequotes.jpg" alt="Game Quotes"></a></div> 
+            <div class="carousel-caption"> 
+                <h4>Game Quotes</h4> 
+                <p>"I am a gamer not because I don't have a life, but because I choose to have MANY."</p> 
+            </div> 
+        </div> 
+        <div class="item"> 
+          <div class="carousel-body"><a href="/archive/春节快乐"><img src="/img/carousel_chineseNewYear.jpg" alt="Chinese New Year"></a></div> 
+            <div class="carousel-caption"> 
+                <h4>Happy Chinese New Year!</h4> 
+            </div> 
+        </div> 
+        <div class="item"> 
+            <div class="carousel-body"><a href="/archive?f=天文学"><img src="/img/carousel_astronomy.jpg" alt="Astronomy"></a></div> 
+            <div class="carousel-caption"> 
+                <h4>Astronomy!</h4> 
+                <p>What secrets hide beneath the light of the stars?</p> 
+            </div> 
+        </div> 
+        <div class="item"> 
+            <div class="carousel-body"><a href="/archive?f=心理学"><img src="/img/carousel_psychology.jpg" alt="pub-psychology"></a></div> 
+            <div class="carousel-caption"> 
+                <h4>I understand the part of you that you don't understand</h4> 
+                <p>Know ourselves</p> 
+            </div> 
+        </div> 
+        <div class="item"> 
+            <div class="carousel-body"><a href="/archive?f=网络安全"><img src="/img/carousel_internetsecurity.jpg" alt="Internet Security"></a></div> 
+            <div class="carousel-caption"> 
+                <h4>Internet is unsafe.</h4> 
+                <p>To protect code, and server.</p> 
+            </div> 
+        </div> 
+        <div class="item"> 
+            <div class="carousel-body"><a href="/archive?f=诺贝尔奖"><img src="/img/carousel_nobelprize.jpg" alt="Nobel Prize"></a></div> 
+            <div class="carousel-caption"> 
+                <h4>The Nobel Prize</h4> 
+                <p>For those outstanding figures of humanity.</p> 
+            </div> 
+        </div> 
+        <div class="item"> 
+            <div class="carousel-body"><a href="/about"><img src="/img/carousel_sys.jpg" alt="SFEI Systems"></a></div> 
+            <div class="carousel-caption"> 
+                <h4>Welcome to North Star.</h4> 
+                <p>North Star is a website that allows users to read, submit blogs and interact with blog writters as well as other users.</p> 
+            </div> 
+        </div> 
+        <div class="item"> 
+            <div class="carousel-body"><a href="/archive"><img src="/img/carousel_archive.jpg" alt="SFEI Systems"></a></div> 
+            <div class="carousel-caption"> 
+                <h4><a href="/archive">Enter the archive.</a></h4> 
+                <p>View all articles written by the users of our website.</p> 
+            </div> 
+        </div> 
+        <div class="item"> 
+            <div class="carousel-body"><a href="/idn"><img src="/img/carousel_idn.jpg" alt="SFEI Systems"></a></div> 
+            <div class="carousel-caption"> 
+                <h4><a href="/idn">Authenticate</a> into the Imaging Database Network.</h4> 
+                <p>Login to discover more features of our website!</p> 
+            </div> 
+        </div> 
     </div>
     <a class="left carousel-control" href="#index-carousel" data-slide="prev">‹</a>
     <a class="right carousel-control" href="#index-carousel" data-slide="next">›</a>
