--- a/views/en/archive_new.ejs
+++ b/views/en/archive_new.ejs
@@ -26,8 +26,20 @@
 				</div>
 		<input class="input-block-level" type="text" name="abstract" id="abstract" placeholder="Enter blog abstract here"/>
       </header>
-            <h4 class="loading_info"><img src="/img/squareajax_30.gif" alt="loading">Loading editor, please standby....</h4>
-			<textarea id="editor" name="content"><p>Enter your blog content here...</p></textarea>
+      <div class="row-fluid">
+        <div class="span6 offset3 loading_info">
+          <h4><img src="/img/squareajax_30.gif" alt="loading">Loading editor, please standby....</h4>
+        </div>
+        <div class="mdeditor span12" style="display:none;">
+          <h1>Hello Editor!</h1>
+          <p>Input your content here...</p>
+        </div>
+      </div>
+      <div class="row-fluid">
+        <textarea class="span12 mdeditor-source">
+          
+        </textarea>
+      </div>
 			<div class="alert alert-block alert-error fade in">
 			<a class="close" data-dismiss="alert" href="#">&times;</a>
 				<h4 id="alert_head"></h4>
@@ -42,7 +54,13 @@
 			</div>
     </article>
   </section>
-	<script type="text/javascript" src="/js/ckeditor/ckeditor.js"></script>
-	<script type="text/javascript" src="/js/ckeditor/adapters/jquery.js"></script>
+  <style type="text/css" src="/js/hallo/hallo.css"></style>
+  <style type="text/css" src="/js/hallo/jquery-ui-bootstrap/css/custom-theme/jquery-ui-1.8.16.custom.css"></style>
+  <style type="text/css" src="/js/hallo/image.css"></style>
+  <style type="text/css" src="/js/hallo/fontawesome/css/font-awesome.css"></style>
+  <script type="text/javascript" src="/js/hallo/jquery-ui-1.10.1.custom.js"></script>
+  <script type="text/javascript" src="/js/hallo/hallo.js"></script>
+  <script type="text/javascript" src="/js/hallo/showdown.js"></script>
+  <script type="text/javascript" src="/js/hallo/to-markdown.js"></script>
 	<script type="text/javascript" src="/js/archive_new.js"></script>
-    <script type="text/javascript" src="/js/filter.js"></script>
+  <script type="text/javascript" src="/js/filter.js"></script>
