still working on markdown editor

--- a/views/en/archive_new.ejs
+++ b/views/en/archive_new.ejs
@@ -54,11 +54,8 @@
 			</div>
     </article>
   </section>
-  <style type="text/css" src="/js/hallo/hallo.css"></style>
-  <style type="text/css" src="/js/hallo/jquery-ui-bootstrap/css/custom-theme/jquery-ui-1.8.16.custom.css"></style>
-  <style type="text/css" src="/js/hallo/image.css"></style>
-  <style type="text/css" src="/js/hallo/fontawesome/css/font-awesome.css"></style>
   <script type="text/javascript" src="/js/hallo/jquery-ui-1.10.1.custom.js"></script>
+  <script type="text/javascript" src="/js/hallo/rangy-core-1.2.3.js"></script>
   <script type="text/javascript" src="/js/hallo/hallo.js"></script>
   <script type="text/javascript" src="/js/hallo/showdown.js"></script>
   <script type="text/javascript" src="/js/hallo/to-markdown.js"></script>
