--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -219,3 +219,29 @@ textarea{
   -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
 }
+
+.hallotoolbar{
+  padding-bottom: 8px;
+}
+
+.hallotoolbar button{
+  padding: 0;
+  background-color: transparent;
+  background-image: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  border-color: transparent;
+  cursor: pointer;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+  color: #252525;
+}
+.hallotoolbar .btn-primary button{
+  color: #eee !important;
+}
+.hallotoolbar .btn,
+.hallotoolbar .btn-primary{
+  padding: 2px 8px;
+}
