--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -192,8 +192,16 @@ textarea{
 }
 .markditor-content{
   font-family: "Courier New", Courier, monospace;
+  -webkit-border-top-left-radius: 0;
+  -moz-border-top-left-radius: 0;
+  border-top-left-radius: 0;
+  -webkit-border-top-right-radius: 0;
+  -moz-border-top-right-radius: 0;
+  border-top-right-radius: 0;
   min-height: 360px !important;
   width: 100%;
+  margin: 0;
+
 }
 .markditor-help{
   margin-top: 6px;
@@ -201,4 +209,19 @@ textarea{
 }
 .markditor-help p{
   font-size: 12px;
+}
+.markditor-toolbar{
+  padding: 6px;
+  -webkit-border-top-left-radius: 4px;
+  -moz-border-top-left-radius: 4px;
+  border-top-left-radius: 4px;
+  -webkit-border-top-right-radius: 4px;
+  -moz-border-top-right-radius: 4px;
+  border-top-right-radius: 4px;
+  background-color: rgba(0,0,0,.025);
+  border: 1px solid #ccc;
+  border-bottom: none;
+}
+.modal.fade.in {
+  top: 280px;
 }
