rebranded to SFEI Systems (logos, navbar, titles)

--- a/views/en/idnlayout.ejs
+++ b/views/en/idnlayout.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>North Star - IDN</title>
+<title>SFEI Systems - IDN</title>
 <link rel='shortcut icon' href="/img/favicon.ico" />
 <link rel='stylesheet' href='/stylesheets/bootstrap.css' />
 <link rel='stylesheet' href='/stylesheets/bootstrap-responsive.css' />
