--- a/views/zh/layout.ejs
+++ b/views/zh/layout.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>北极星网</title>
+<title>SFEI系统</title>
 <link rel='shortcut icon' href="/img/favicon.ico" />
 <link rel='stylesheet' href='/stylesheets/bootstrap.css' />
 <link rel='stylesheet' href='/stylesheets/bootstrap-responsive.css' />
