issue #18, slight improvements on 40x pages

--- a/views/en/403.ejs
+++ b/views/en/403.ejs
@@ -1,4 +1,4 @@
 <div class="hero-unit">
-	<img width="800" height="240" alt="404" src="/img/403.png"/>
-    <h1>Error. Insufficient access level.</h1>
+	<h1>403 Forbidden.</h1>
+	<h2>Access denied.</h2>
   </div>
