--- a/views/en/404.ejs
+++ b/views/en/404.ejs
@@ -1,12 +1,5 @@
 <div class="hero-unit">
-	<img width="800" height="240" alt="404" src="/img/404.png"/>
-    <h1>To ask why we return 404,</h1>
-    <p>is to ask why the leaves fall.</p>
-    <p>It is in their nature...</p>
-    <p>Perhaps there is a better solution: <a href="/" class="btn btn-primary btn-small"> Main Cluster </a> <a href="#" class="btn btn-info btn-small"> Go back </a></p>
-    <h2>Why do we return 404?</h2>
-	<p>To protect code, and server.</p>
-	<p>To preserve data, and bring harmony.</p>
-	<h4>For our kind, the true question is,</h4>
-	<h2>What is worth <strong>404</strong> for?</h2>
+    <img class="pull-right" src="/img/404-yoda.png" alt="Master Yoda">
+    <h1>Code 404 I sense.</h1>
+    <h2>Not the what you are looking for this page is.</h2>
   </div>
