--- a/views/zh/403.ejs
+++ b/views/zh/403.ejs
@@ -1,5 +1,4 @@
 ﻿<div class="hero-unit">
-	<img width="800" height="240" alt="404" src="/img/403.png"/>
-    <h1>警告。侦测到未授权的访问。</h1>
-	<p>特别行动小组代号“清扫”已经出发，预计到达时间：403秒之后。</p>
+	<h1>403 Forbidden.</h1>
+	<h2>警告。侦测到未授权的访问。</h2>
   </div>
