--- a/views/en/401.ejs
+++ b/views/en/401.ejs
@@ -1,5 +1,6 @@
 <div class="hero-unit">
-  <h1>To ask why we return 401,</h1>
+  <h1 class="ani-40x">401 Unauthorized.</h1>
+  <h2>To ask why we return 401,</h2>
   <p>is to ask why the leaves fall.</p>
   <h3>It is in their nature...</h3>
   <p>Perhaps there is a better option <a href="/idn" class="btn btn-primary btn-small"> Authenticate </a></p>
