--- a/views/template.html
+++ b/views/template.html
@@ -35,11 +35,7 @@
 <div class="container">
   <header class="logoHeader"></header>
   <div class="hero-unit">
-    <h1>Welcome.</h1>
-    <p>Welcome to the SFEI Systems Evolution III, aka Imaging Database Network.</p>
-    <p>Blogs written by SFEI are available at the <span class="label label-info"> Blogs Archive</span> section.</p>
-    <p>Web applications developed by SFEI are available at the <span class="label label-info"> Web Applications</span> section.</p>
-    <p>For users who requrire access to the Imaging Database Network, click <strong>&quot;Imaging Database Network&quot;</strong> on the navigation bar or click the <strong>&quot;Authenticate&quot;</strong> button.</p>
+    <h1 class="ani-40x">Access denied.</h1>
   </div>
   <section class="blogsArchive">
     <div class="row-fluid">
