--- a/views/zh/401.ejs
+++ b/views/zh/401.ejs
@@ -1,4 +1,5 @@
 <div class="hero-unit">
+  <h1 class="ani-40x">401 Unauthorized.</h1>
   <h1>战火为何而燃，四零一为何而落？</h1>
   <p>天性不可夺。</p>
   <p>吾辈心中亦有惑: <a href="/idn" class="btn btn-primary btn-small"> 认证 </a></p>
