40x pages will now return specific code
When displaying 40x pages, the server will return specific status codes
instead of 200 OK.

--- a/views/en/404.ejs
+++ b/views/en/404.ejs
@@ -2,4 +2,5 @@
     <img class="pull-right" src="/img/404-yoda.png" alt="Master Yoda">
     <h1>Code 404 I sense.</h1>
     <h2>Not the what you are looking for this page is.</h2>
+    <p>Go back to <a href="/">Main Sequence</a> you can try.</p>
   </div>
