--- a/views/zh/404.ejs
+++ b/views/zh/404.ejs
@@ -1,5 +1,6 @@
 ﻿<div class="hero-unit">
-	<img class="pull-right" src="/img/404-yoda.png" alt="Master Yoda">
-    <h1>代号404我感觉到。</h1>
-    <h2>不是你要找的这个页面。</h2>
-  </div>
+  <img class="pull-right" src="/img/404-yoda.png" alt="Master Yoda">
+  <h1>代号404我感觉到。</h1>
+  <h2>不是你要找的这个页面。</h2>
+  <p>回到<a href="/">主序列</a>你可以尝试。</p>
+</div>
