--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,1 +1,11 @@
-<blockquote>mongourl:<br> <%= mongourl %></blockquote>
+<div>
+  <span class="label">Server status</span>
+  <blockquote>mongourl:<br> <%= info.mongourl %></blockquote>
+</div>
+<div class="admin-tags-management">
+  <span class="label">Tags management</span>
+  <div>
+    
+  </div>
+</div>
+<script src="/js/admin.js"></script>
