--- a/views/en/archive_edit.ejs
+++ b/views/en/archive_edit.ejs
@@ -3,7 +3,7 @@
     </div>
   <section class="blogsArchive">
     
-    <article>
+    <article data-objid="<%= objid %>">
       <header>
         <div class="btn-group pull-right" data-toggle="buttons-radio">
           <a href="javascript:;" class="btn btn-mini active" id="editor-toggle-html"> HTML </a><a href="javascript:;" class="btn btn-mini" id="editor-toggle-md"> Markdown </a>
