Updated index page

--- a/views/en/indexlayout.ejs
+++ b/views/en/indexlayout.ejs
@@ -51,38 +51,17 @@ $(document).ready(function(e) {
 <div id="index-carousel" class="carousel slide">
     <div class="carousel-inner"> 
         <div class="item active"> 
+          <div class="carousel-body"><a href="http://www.ingress.com"><img src="/img/carousel_ingress.jpg" alt="Ingress"></a></div> 
+            <div class="carousel-caption"> 
+                <h4>The world around you is not what it seems.</h4> 
+                <p>It's happening all around you. They aren't coming. They're already here.</p> 
+            </div>
+        </div> 
+        <div class="item"> 
           <div class="carousel-body"><a href="/archive?f=Game%20Quotes"><img src="/img/carousel_gamequotes.jpg" alt="Game Quotes"></a></div> 
             <div class="carousel-caption"> 
                 <h4>Game Quotes</h4> 
                 <p>"I am a gamer not because I don't have a life, but because I choose to have MANY."</p> 
-            </div> 
-        </div> 
-        <div class="item"> 
-            <div class="carousel-body"><a href="/archive?f=天文学"><img src="/img/carousel_astronomy.jpg" alt="Astronomy"></a></div> 
-            <div class="carousel-caption"> 
-                <h4>Astronomy!</h4> 
-                <p>What secrets hide beneath the light of the stars?</p> 
-            </div> 
-        </div> 
-        <div class="item"> 
-            <div class="carousel-body"><a href="/archive?f=心理学"><img src="/img/carousel_psychology.jpg" alt="pub-psychology"></a></div> 
-            <div class="carousel-caption"> 
-                <h4>I understand the part of you that you don't understand</h4> 
-                <p>Know ourselves</p> 
-            </div> 
-        </div> 
-        <div class="item"> 
-            <div class="carousel-body"><a href="/archive?f=网络安全"><img src="/img/carousel_internetsecurity.jpg" alt="Internet Security"></a></div> 
-            <div class="carousel-caption"> 
-                <h4>Internet is unsafe.</h4> 
-                <p>To protect code, and server.</p> 
-            </div> 
-        </div> 
-        <div class="item"> 
-            <div class="carousel-body"><a href="/archive?f=诺贝尔奖"><img src="/img/carousel_nobelprize.jpg" alt="Nobel Prize"></a></div> 
-            <div class="carousel-caption"> 
-                <h4>The Nobel Prize</h4> 
-                <p>For those outstanding figures of humanity.</p> 
             </div> 
         </div> 
         <div class="item"> 
