--- a/views/zh/indexlayout.ejs
+++ b/views/zh/indexlayout.ejs
@@ -50,7 +50,21 @@ $(document).ready(function(e) {
 </header>
 <div id="index-carousel" class="carousel slide">
     <div class="carousel-inner">
-        <div class="item active">
+        <div class="item active"> 
+          <div class="carousel-body"><a href="http://www.ingress.com"><img src="/img/carousel_ingress.jpg" alt="Ingress"></a></div> 
+            <div class="carousel-caption"> 
+                <h4>这个世界与它的表象不同。</h4> 
+                <p>一切都在你身边发生。他们没有到达。他们早已在这。</p> 
+            </div> 
+        </div> 
+        <div class="item"> 
+          <div class="carousel-body"><a href="/archive?f=Game%20Quotes"><img src="/img/carousel_gamequotes.jpg" alt="Game Quotes"></a></div> 
+            <div class="carousel-caption"> 
+                <h4>游戏台词摘录</h4> 
+                <p>“我选择做一个游戏玩家并非因为我没有人生，而是因为我选择拥有很多。”</p> 
+            </div> 
+        </div> 
+        <div class="item">
             <div class="carousel-body"><a href="/about"><img src="/img/carousel_sys.jpg" alt="SFEI Systems"></a></div>
             <div class="carousel-caption">
                 <h4>欢迎访问北极星网。</h4>
