Added Stardate to nav-bar

--- a/views/zh/idnlayout.ejs
+++ b/views/zh/idnlayout.ejs
@@ -42,6 +42,7 @@ $(document).ready(function(e) {
           <li><a href="?lang=zh">简体中文</a></li>
         </ul>
 	  </li>
+    <li><a class="nav-stardate" href="http://isn.sfeisystems.net/Stardate"><i class="icon-time"></i>星历 <span id="stardate"></span></a></li>
       <li class="dropdown">
       	<a href="about" class="dropdown-toggle version" data-toggle="dropdown"><%= version %></a>
         <ul class="dropdown-menu">
