--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -18,7 +18,6 @@
 }
 body {
   background: url(../img/bg_dna.jpg);
-  padding-top: 40px;
 }
 body .container {
   background: #fff;
@@ -250,6 +249,13 @@ textarea{
   -o-animation: underscore-flash 2s infinite;
   animation: underscore-flash 2s infinite;
 }
+
+.nav-stardate {
+  font-size: 12px;
+  font-weight: 100;
+  font-variant: small-caps;
+}
+
 @-webkit-keyframes underscore-flash {
   0% { opacity:1; }
   24% { opacity:1; }
@@ -288,4 +294,10 @@ textarea{
   70% { opacity:0; }
   95% { opacity:1; }
   100% { opacity: 1; }
+}
+
+@media (min-width: 980px) {
+  body {
+    padding-top: 40px;
+  }
 }
